--- a/front/client/app/main/main.html
+++ b/front/client/app/main/main.html
@@ -17,6 +17,9 @@
       </ul>
     </div>
   </div>
+  <div class="row">
+    <datamap map="mapObject"></datamap>
+  </div>
 </div>
 
 <footer class="footer">
