--- a/front/client/app/main/main.html
+++ b/front/client/app/main/main.html
@@ -25,7 +25,7 @@
   </div>
   <div class="col-sm-1">
     <p class="gtitle" style="text-align: center;">GDP</p>
-    <p class="gtitle" style="text-align: center;">{{graphResults.gdp | number}}</p>
+    <p class="gtitle" style="text-align: center;">{{graphResults.gdp | number}} vs GDP avg: 340161.06</p>
 
     <!--<dcirc lab="gdp" val={{graphResults.gdp}}>-->
       <!--<svg id="gdp" width="100" height="100"></svg>-->
@@ -46,14 +46,14 @@
 
   <div class="col-sm-1">
     <p class="gtitle" style="text-align: center;">VC Contr.</p>
-    <p class="gtitle" style="text-align: center;">{{graphResults.vcdeals | number}}</p>
+    <p class="gtitle" style="text-align: center;">{{graphResults.vcdeals | number}} vs VC investment avg: $929,780,508</p>
     <!--<dcirc lab="vc" val={{graphResults.vcdeals}}>-->
       <!--<svg id="vc" width="100" height="100"></svg>-->
     <!--</dcirc>-->
   </div>
   <div class="col-sm-1">
     <p class="gtitle" style="text-align: center;">VC Deals</p>
-    <p class="gtitle" style="text-align: center;">{{graphResults.vcd | number}}</p>
+    <p class="gtitle" style="text-align: center;">{{graphResults.vcd | number}} vs deals avg: 84</p>
     <!--<dcirc lab="vcd" val={{graphResults.vcd}}>-->
       <!--<svg id="vcd" width="100" height="100"></svg>-->
     <!--</dcirc>-->
