--- a/front/client/app/main/main.html
+++ b/front/client/app/main/main.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="mtitle">National Economic Growth Assesment</div>
+<div class="mtitle"><img src="assets/images/Logo.png">GETMap</div>
 
 <div class="container" style="height: 600px">
   <div class="row">
