--- a/front/client/index.html
+++ b/front/client/index.html
@@ -8321,7 +8321,7 @@
                                 </li>
                             </ul> <a class="col-xs-12 more" href="https://www.freeenterprise.com/category/america-at-work/">MORE STORIES <img src="assets/Free_Enterprise_files/More-Icon.png" alt="More Stories"></a></div>
                     </li>
-                    <li class="principal nav-height hidden-xs americaatwork-hover"> <a href="https://www.freeenterprise.com/the-2015-hackathon/">The 2015 Mapathon</a></li>
+                    <li class="principal nav-height hidden-xs americaatwork-hover"> <a href="https://www.freeenterprise.com/the-2015-hackathon/">GETMap</a></li>
                 </ul>
             </div>
 
